privileged-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: privelegedcontainer
spec:
  crd:
    spec:
      names:
        kind: PrivelegedContainer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package privelegedcontainer

        violation[{"msg": msg}] {
            c := input.review.object.spec.containers[_]
            c.securityContext.privileged
            msg := sprintf("Privileged container is not allowed: %v, securityContext: %v", [c.name, c.securityContext])
        }
